log
ju., 21 de abr. de 2022 11:29:14: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|8
total_score: 0/70
86c4f7b
ju., 21 de abr. de 2022 11:30:20: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c21f3d2
ju., 21 de abr. de 2022 11:31:29: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
1da280b
ju., 21 de abr. de 2022 11:45:07: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b21557d
ju., 21 de abr. de 2022 12:03:55: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
      aux->parent = searchTreeMap(tree, key);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
c7bd997
